# tee-gateway

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  analyze_monitoring.py  dev-requirements.txt  measurements.txt  monitor_tee_service.py  pyproject.toml  requirements.txt  run-enclave.sh  server.py  start.sh  test_tee_llm_router.py  verify_attestation.py  verify_signature_example.py  visualize_monitoring_data.py
.github/workflows/: lint.yml  reproducible-build.yml  test.yml
contracts/: Heartbeat.sol
docs/: nitro-enclave-setup.md
examples/: requirements.txt  verify_attestation.py  verify_signature_example.py
monitoring_results/: chat_requests_20260131_071048.csv  health_checks_20260131_071048.csv  session_summary_20260131_071048.json  stream_requests_20260131_071048.csv
openapi_server/: __main__.py  definitions.py  llm_backend.py  model_registry.py  tee_manager.py  util.py
openapi_server/controllers/: chat_controller.py  completions_controller.py  security_controller.py
openapi_server/heartbeat/: heartbeat.py
openapi_server/models/: __init__.py  assistant_stream_event.py  (+15 more)
scripts/: run-enclave.sh  start.sh  stresstest.sh
src/: heartbeat.py  server.py
tee_gateway/: __main__.py  config.py  definitions.py  encoder.py  facilitator_api.py  llm_backend.py  model_registry.py  opg_price_feed.py  tee_manager.py  typing_utils.py  util.py
tests/: mypy.ini  requirements.txt  test_integration.py  test_log_timestamps.py  test_price_feed.py  test_pricing.py  test_server.py  test_structured_outputs.py
(+35 files in other folders)
