[project]
name = "tee-gateway"
version = "1.0.0"
description = "OpenGradient TEE-gateway LLM routing service for AWS Nitro Enclaves"
requires-python = ">=3.12,<3.13"
dependencies = [
    "connexion[swagger-ui]<3.0.0",
    "werkzeug>=2.2.3",
    "swagger-ui-bundle>=0.0.2",
    "python_dateutil>=2.6.0",
    "setuptools>=21.0.0",
    "Flask>=3.0.0",
    "gunicorn>=23.0.0",
    "og-x402[evm]==0.0.1.dev5",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "urllib3>=2.0.0",
    "langchain>=0.3.27",
    "langchain-core>=1.2.7",
    "langchain-openai>=0.3.35",
    "langchain-anthropic>=0.3.22",
    "langchain-google-genai>=4.2.0",
    "langchain-xai>=0.2.5",
    "openai>=2.15.0",
    "anthropic>=0.76.0",
    "google-generativeai>=0.8.6",
    "cryptography>=46.0.5",
    "eth-hash[pycryptodome]>=0.7.0",
    "h2>=4.3.0",
    "httpx>=0.28.1",
    "httpcore>=1.0.9",
    "psutil>=7.2.1",
    "python-dotenv>=1.2.1",
    "eth-account>=0.13.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.9.1",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.1",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
exclude = [".claude/worktrees"]

[tool.uv]
# Pre-release needed for og-test-v2-x402==0.0.11.dev5
prerelease = "allow"
